force-app/main/default/objects/sugati__Vehicle__c/fields/sugati__V_Max_Seats__c.field-meta.xml
<CustomField>
    <fullName>sugati__V_Max_Seats__c</fullName>
    <formula>sugati__V_Vehicle_Type__r.sugati__VT_Max_Seats__c</formula>
    <label>Max Seats</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>