force-app/main/default/objects/sugati__Vehicle__c/fields/sugati__V_Spaces_Remaining__c.field-meta.xml
<CustomField>
    <fullName>sugati__V_Spaces_Remaining__c</fullName>
    <formula>sugati__V_Max_Seats__c - sugati__VA_Allocated_Seats__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Spaces Remaining</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>