force-app/main/default/objects/sugati__Vehicle__c/fields/sugati__V_Tour__c.field-meta.xml
<CustomField>
    <fullName>sugati__V_Tour__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Tour</label>
    <referenceTo>Opportunity</referenceTo>
    <relationshipLabel>Vehicles</relationshipLabel>
    <relationshipName>Vehicles</relationshipName>
    <type>Lookup</type>
</CustomField>