force-app/main/default/objects/sugati__Vehicle__c/fields/sugati__V_Vehicle_Number__c.field-meta.xml
<CustomField>
    <fullName>sugati__V_Vehicle_Number__c</fullName>
    <label>Vehicle Number</label>
    <length>50</length>
    <type>Text</type>
</CustomField>