force-app/main/default/objects/sugati__Vehicle__c/fields/sugati__V_Vehicle_Type__c.field-meta.xml
<CustomField>
    <fullName>sugati__V_Vehicle_Type__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Vehicle Type</label>
    <referenceTo>sugati__Vehicle_Type__c</referenceTo>
    <relationshipLabel>Vehicles</relationshipLabel>
    <relationshipName>Vehicles</relationshipName>
    <type>Lookup</type>
</CustomField>