force-app/main/default/objects/sugati__Vehicle__c/fields/sugati__V_Vehicle_Type_Name__c.field-meta.xml
<CustomField>
    <fullName>sugati__V_Vehicle_Type_Name__c</fullName>
    <formula>sugati__V_Vehicle_Type__r.Name</formula>
    <label>Vehicle Type Name</label>
    <type>Text</type>
</CustomField>