force-app/main/default/objects/sugati__Vehicle__c/fields/sugati__VA_Allocated_Seats__c.field-meta.xml
<CustomField>
    <fullName>sugati__VA_Allocated_Seats__c</fullName>
    <label>Allocated Seats</label>
    <summaryFilterItems>
        <field>sugati__Vehicle_Allocation__c.sugati__VA_Status__c</field>
        <operation>equals</operation>
        <value>Booked</value>
    </summaryFilterItems>
    <summaryForeignKey>sugati__Vehicle_Allocation__c.sugati__VA_Vehicle__c</summaryForeignKey>
    <summaryOperation>count</summaryOperation>
    <type>Summary</type>
</CustomField>