force-app/main/default/objects/sugati__Vehicle__c/fields/sugati__VA_Vehicle_Note__c.field-meta.xml
<CustomField>
    <fullName>sugati__VA_Vehicle_Note__c</fullName>
    <label>Vehicle Note</label>
    <type>TextArea</type>
</CustomField>